www/css/_elements.scss
/* default html tag styles go in here */

blockquote {
  &:before {
    position: relative;
    left: -25px;
    top: 15px;
    content: open-quote;
    font-size: 3.5em;
    line-height: 0;
    display: block;
    width: 30px;
  }
  &:after {
    position: relative;
    left: calc(100% - 5px);
    content: close-quote;
    font-size: 3.5em;
    line-height: 0;
    display: block;
    width: 30px;
  }
  &:hover:before,
  &:hover:after {
    animation-name: spin-with-skip;
    animation-duration: 1500ms;
    animation-iteration-count: infinite;
    animation-timing-function: ease-in;
  }
}

dialog {
  width: 500px;
  max-width: 100%;
  &::backdrop {
    height: 100%;
    width: 100%;
    background: rgba(255, 255, 255, 0.15);
    backdrop-filter: blur(3px);
    opacity: 0.5;
    cursor: pointer;
  }
  &:hover {
    cursor: pointer;
  }
}

ul {
  &.no-dots {
    list-style-type: none;
  }
}

summary {
  cursor: pointer;
}

/* custom elements */

[htmlCommentToggle] {
  font-weight: bold;
  font-size: 24px;
  animation: twitchy var(--animation-duration--twitchy) ease-in-out forwards
    infinite;
  &:hover {
    cursor: context-menu;
  }
}

[htmlCommentRevealed] {
  font-style: italic;
  &:hover {
    cursor: pointer;
  }
}

[htmlCommentRevealed],
[htmlCommentToggle] {
  color: rgb(var(--col-fg-secondary));
}

